fix z-index issue with timeline footer

--- a/src/assets/styles/timeline.less
+++ b/src/assets/styles/timeline.less
@@ -105,7 +105,6 @@
     background: @body-background;
     padding: 50px 0px 100px 0px;
     position: relative;
-    z-index: 1;
 
     .good-bye {
       text-align: center;
